--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       EMAIL_ADDRESS: ${EMAIL_ADDRESS}
       EMAIL_PASSWORD: ${EMAIL_PASSWORD}
       APP_URL: ${APP_URL}
+      JWT_SECRET: ${JWT_SECRET}
     # ホストの8080番ポートに来たものをコンテナの8080番にフォワードする
     ports:
       - "8080:8080"
