--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 
 RUN go build -o main cmd/api/main.go
 
-# EXPOSE 8080
+# 開発中は変更を検知して再ビルドするために以下のコマンドを実行する
+RUN go get github.com/githubnemo/CompileDaemon
 
 CMD ["./main"]
