--- a/react/project/package.json
+++ b/react/project/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.16.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
+    "i18next": "^23.16.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1"
   },
