--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -16,6 +16,11 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # uploadsディレクトリへのアクセスを許可
+    location /uploads/ {
+        alias /usr/src/app/uploads/;
+    }
+
     #error_page  404              /404.html;
 
 
