--- a/react/project/.env
+++ b/react/project/.env
@@ -1,5 +1,11 @@
 # VITE_APP_API_URL=http://192.168.111.102:8080
-VITE_APP_API_URL=http://localhost:8080
+VITE_APP_API_URL=${GO_API_URL}
+
+# APP_URL=http://
+VITE_APP_NGINX_URL=${APP_URL}
+
+# MEDIA_URL=http://
+VITE_APP_MEDIA_URL=${APP_URL}
 
 # 言語設定を追加、.envファイルのAPP_LANGをVITE_APP_LANGに変更
 VITE_APP_LANG=${APP_LANG}
